# inel

./: Cargo.toml  bench.sh  check.sh  coverage.sh  readme.md
.github/workflows/: general.yaml
crates/inel/: Cargo.toml
crates/inel-benches/: Cargo.toml
crates/inel-benches/benches/: unit.rs
crates/inel-benches/src/: lib.rs
crates/inel-examples/: Cargo.toml
crates/inel-examples/certs/: localhost.cert  localhost.key
crates/inel-examples/src/: axum.rs  groups.rs  hello.rs  hyper.rs
crates/inel-executor/: Cargo.toml
crates/inel-executor/src/: executor.rs  join.rs  lib.rs  task.rs  waker.rs
crates/inel-executor/tests/: main.rs
crates/inel-interface/: Cargo.toml
crates/inel-interface/src/: lib.rs
crates/inel-macro/: Cargo.toml
crates/inel-macro/src/: lib.rs
crates/inel-reactor/: Cargo.toml
crates/inel-reactor/src/: buffer.rs  cancellation.rs  completion.rs  group.rs  lib.rs  reactor.rs  ring.rs  source.rs  submission.rs  target.rs  util.rs
crates/inel-reactor/src/op/: buffers.rs  direct.rs  file.rs  fs.rs  group.rs  link.rs  mod.rs  net.rs  read.rs  time.rs  write.rs
crates/inel-reactor/src/ring/: completion.rs  mod.rs  register.rs
crates/inel-reactor/tests/: helpers.rs  main.rs
crates/inel-reactor/tests/main/: buffer.rs  cancellation.rs  chain.rs  dir.rs  file.rs  group.rs  helpers.rs  main.rs  net.rs  read.rs  timeout.rs  write.rs
crates/inel/examples/: axum_server.rs  basic.rs  hyper_server.rs
crates/inel/src/: buffer.rs  group.rs  lib.rs  source.rs  time.rs  traits.rs  util.rs
crates/inel/src/compat/: axum.rs  hyper.rs  mod.rs  rustls.rs  stream.rs
crates/inel/src/fs/: dir.rs  file.rs  func.rs  mod.rs
crates/inel/src/io/: mod.rs  owned.rs  split.rs
crates/inel/src/io/buffered/: mod.rs
crates/inel/src/io/buffered/reader/: fixed.rs  generic.rs  group.rs  mod.rs  stable.rs
crates/inel/src/io/buffered/writer/: fixed.rs  generic.rs  group.rs  mod.rs  stable.rs
crates/inel/src/net/: mod.rs  tcp.rs
crates/inel/tests/: main.rs
crates/inel/tests/fs/: dir.rs  file.rs  main.rs  read.rs  write.rs
crates/inel/tests/io/: bufreader.rs  bufwriter.rs  main.rs  read.rs  write.rs
crates/inel/tests/unit/: compat.rs  helpers.rs  main.rs
crates/inel/tests/unit/fs/: dir.rs  file.rs  func.rs  mod.rs
crates/inel/tests/unit/io/: bufreader.rs  bufwriter.rs  group.rs  mod.rs  read.rs  write.rs
crates/inel/tests/unit/net/: tcp.rs
examples/: bufread.rs  echo.rs  server.rs  stdin.rs  tcp.rs
src/: executor.rs  lib.rs  reactor.rs  task.rs  time.rs  waker.rs
src/io/: mod.rs
src/net/: mod.rs
src/reactor/: handle.rs  mod.rs  read.rs  ring.rs  socket.rs  write.rs
src/runtime/: executor.rs  join.rs  mod.rs  task.rs  waker.rs
tests/: main.rs  net.rs
tests/runtime/: cancel.rs  helpers.rs  main.rs  net.rs  sanity.rs  time.rs
