[workspace]
resolver = "2"

members = [
  "crates/inel",
  "crates/inel-interface",
  "crates/inel-executor",
  "crates/inel-reactor",
  "crates/inel-macro",
]

[workspace.dependencies]
flume = { version = "0.11", default-features = false }
futures = "0.3"
io-uring = { git = "https://github.com/mihneabuz/io-uring.git" }
libc = "0.2"
tracing = "0.1"
pin-project-lite = "0.2"
slab = "0.4"
