[workspace]
resolver = "2"

members = [
  "crates/inel",
  "crates/inel-interface",
  "crates/inel-executor",
  "crates/inel-reactor",
  "crates/inel-macro",
  "crates/inel-examples",
]

[workspace.dependencies]
flume = { version = "0.11", default-features = false }
futures = "0.3"
io-uring = { git = "https://github.com/mihneabuz/io-uring.git" }
libc = "0.2"
tracing = "0.1"
pin-project-lite = "0.2"
slab = "0.4"

# tests
rand = "0.9.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
