[package]
name = "inel-examples"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "hyper"
path = "src/hyper.rs"

[[bin]]
name = "axum"
path = "src/axum.rs"

[[bin]]
name = "groups"
path = "src/groups.rs"

[dependencies]
inel = { path = "../inel", features = ["full"] }

axum = "0.8"
futures = { workspace = true }
http-body-util = "0.1"
hyper = "1.6"
