[package]
name = "inel-reactor"
version = "0.1.0"
edition = "2021"

[dependencies]
inel-interface = { path = "../inel-interface" }
io-uring = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
pin-project-lite = { workspace = true }
slab = { workspace = true }

[dev-dependencies]
inel-macro = { path = "../inel-macro/" }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
