[package]
name = "inel"
version = "0.1.0"
edition = "2021"

[features]
default = []
sys = []
compat = []
hyper = ["dep:hyper", "compat"]

[dependencies]
inel-interface = { path = "../inel-interface" }
inel-executor = { path = "../inel-executor" }
inel-reactor = { path = "../inel-reactor" }
inel-macro = { path = "../inel-macro" }
futures = { workspace = true }
libc = { workspace = true }
pin-project-lite = { workspace = true }

hyper = { version = "1.6", optional = true }

[dev-dependencies]
# tests
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = { workspace = true }
uuid = { version = "1.10.0", features = ["v4"] }
rand = "0.8"

# server example
hyper = "1.6"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["client"] }
axum = "0.8"
tower = "0.5"
