[package]
name = "inel"
version = "0.1.0"
edition = "2021"

[features]
default = ["full"]
sys = []
compat = []
hyper = ["dep:hyper", "dep:pin-project-lite", "compat"]
full = ["hyper"]

[dependencies]
inel-interface = { path = "../inel-interface" }
inel-executor = { path = "../inel-executor" }
inel-reactor = { path = "../inel-reactor" }
inel-macro = { path = "../inel-macro" }
futures = { workspace = true }
libc = { workspace = true }

pin-project-lite = { workspace = true, optional = true }
hyper = { version = "1.6", optional = true }

[dev-dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
hyper = { version = "1.6", features = ["client", "server", "http1"] }
