[package]
name = "inel"
version = "0.1.0"
edition = "2021"

[features]
default = ["full"]
sys = []
compat = []
rustls = ["compat", "dep:rustls", "dep:futures-rustls"]
hyper = ["compat", "dep:hyper"]
axum = ["compat", "hyper", "dep:axum", "dep:tower", "dep:tracing"]
full = ["axum", "hyper", "rustls"]

[dependencies]
inel-interface = { path = "../inel-interface" }
inel-executor = { path = "../inel-executor" }
inel-reactor = { path = "../inel-reactor" }
inel-macro = { path = "../inel-macro" }
futures = { workspace = true }
libc = { workspace = true }

hyper = { version = "1.6", optional = true, features = ["server", "client", "http2"] }

rustls = { version = "0.23", optional = true }
futures-rustls = { version = "0.26", optional = true }

axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
hyper = { version = "1.6", features = ["client", "server", "http1"] }
rand = { workspace = true }
rustls-pemfile = "2.2.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
